WaterConsumptions without transformer
